--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "16.4.7",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.378.0",
     "next": "15.4.9",
     "next-sitemap": "^4.2.3",
@@ -63,6 +64,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/react": "16.3.0",
     "@types/escape-html": "^1.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "22.5.4",
     "@types/react": "19.2.1",
     "@types/react-dom": "19.2.1",
