chore: Configure Vercel to use build instead of ci

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
-  "crons": [
-    {
-      "path": "/api/payload-jobs/run",
-      "schedule": "0 0 * * *"
-    }
-  ]
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "pnpm run build"
 }
