--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.378.0",
     "next": "15.4.9",
     "next-sitemap": "^4.2.3",
+    "openai": "^6.15.0",
     "payload": "3.63.0",
     "prism-react-renderer": "^2.3.1",
     "react": "19.2.1",
@@ -58,7 +59,8 @@
     "resend": "^6.6.0",
     "sharp": "0.34.2",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
