feat: Switch all AI from OpenAI GPT-4o to Google Gemini 2.0 Flash

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@payloadcms/admin-bar": "3.63.0",
     "@payloadcms/db-vercel-postgres": "3.63.0",
     "@payloadcms/email-resend": "3.63.0",
