--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "pnpm run build"
+  "buildCommand": "pnpm run build",
+  "crons": [
+    {
+      "path": "/api/backup/drive",
+      "schedule": "0 0 * * *"
+    }
+  ]
 }
