simplify: remove Google Drive backup, keep download-only
- Removed googleapis package (16MB, causing build timeouts)
- Removed backup-drive.ts endpoint
- Removed daily cron job
- Simplified BackupDownload to download-only button
- Manual backup download still works via /api/backup/export

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "pnpm run build",
-  "crons": [
-    {
-      "path": "/api/backup/drive",
-      "schedule": "0 0 * * *"
-    }
-  ]
+  "buildCommand": "pnpm run build"
 }
