Add Year in Clean cron job: annual report generation on Dec 20th

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,10 @@
     {
       "path": "/api/cron/calculate-archetypes",
       "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/year-in-clean-cron",
+      "schedule": "0 9 20 12 *"
     }
   ]
 }
