fix: queuePosition in activeCases response + 500 error fix for scoutContributors JSON query

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,8 @@ NEXT_PUBLIC_RUDDERSTACK_DATA_PLANE_URL=YOUR_RUDDERSTACK_DATA_PLANE_URL
 # Create a separate Node.js source in RudderStack for server-side events
 RUDDERSTACK_SERVER_WRITE_KEY=YOUR_RUDDERSTACK_SERVER_WRITE_KEY
 RUDDERSTACK_DATA_PLANE_URL=YOUR_RUDDERSTACK_DATA_PLANE_URL
+
+# Redis (Caching)
+# Optional: Falls back to in-memory cache if not configured
+# Format: redis://[[username][:password]@][host][:port][/db-number]
+REDIS_URL=redis://localhost:6379
