--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "7.45.4",
+    "redis": "^4.7.0",
     "resend": "^6.6.0",
     "sharp": "0.34.2",
     "stripe": "^20.1.0",
